hopefully fixed the div overlap issue, more testing needed (also exp. page not updated)

--- a/m_and_k_explained/src/processpage.css
+++ b/m_and_k_explained/src/processpage.css
@@ -141,7 +141,7 @@ img {
     position: fixed;
     block-size: fit-content;
     top: 0%;
-    height: 88%;
+    height: 95%;
     margin: 1%;
     border-radius: 30px;
     background-color: #a75365;
@@ -181,6 +181,12 @@ img {
 
 .container {
     position: relative;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    height: 100%;
+    min-height: 100%;
+    max-height: 100%;
     text-align: center;
     color: white;
 }
